--- a/Project.toml
+++ b/Project.toml
@@ -4,22 +4,35 @@ authors = ["ekinakyurek <akyurekekin@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 ColorBrewer = "a2cac450-b92f-5266-8821-25eda20663c8"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
-[extras]
+[weakdeps]
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+
+[compat]
+AbstractMCMC = "5.6.0"
+MCMCChains = "6.0.7"
+MCMCDiagnosticTools = "0.3.14"
+Makie = "0.21"
+StatsAPI = "1.7.0"
+
+[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Makie"]
+test = ["Test"]
